--- a/EstateManagementUI.BlazorServer/Components/Pages/Operators/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Operators/Index.razor
@@ -2,8 +2,9 @@
 @using EstateManagementUI.BlazorServer.Factories
 @rendermode InteractiveServer
 @using EstateManagementUI.BlazorServer.Permissions
+@using EstateManagementUI.BlazorServer.UIServices
 @using EstateManagementUI.BusinessLogic.Requests
-@inject IMediator Mediator
+@inject IOperatorUIService OperatorUiService
 @inherits AuthorizedComponentBase
 @inject NavigationManager NavigationManager
 @inject IPermissionKeyProvider PermissionKeyProvider
