--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionSummaryOperator.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionSummaryOperator.razor
@@ -3,8 +3,8 @@
 @using EstateManagementUI.BusinessLogic.Models
 @using EstateManagementUI.BusinessLogic.Requests
 @using MerchantDropDownModel = EstateManagementUI.BlazorServer.Models.MerchantDropDownModel
-@using OperatorDropDownModel = EstateManagementUI.BlazorServer.Models.OperatorDropDownModel
-@using OperatorModel = EstateManagementUI.BlazorServer.Models.OperatorModel
+@using OperatorDropDownModel = EstateManagementUI.BlazorServer.Models.OperatorModels.OperatorDropDownModel
+@using OperatorModel = EstateManagementUI.BlazorServer.Models.OperatorModels.OperatorModel
 @using OperatorTransactionSummaryModel = EstateManagementUI.BlazorServer.Models.OperatorTransactionSummaryModel
 @rendermode InteractiveServer
 @inject IMediator Mediator
