--- a/EstateManagementUI.BlazorServer/Components/Pages/Contracts/New.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Contracts/New.razor
@@ -1,13 +1,10 @@
 @page "/contracts/new"
 @rendermode InteractiveServer
 @inherits AuthorizedComponentBase
-@using System.ComponentModel.DataAnnotations
-@using EstateManagementUI.BlazorServer.Factories
-@using EstateManagementUI.BlazorServer.Permissions
-@using EstateManagementUI.BusinessLogic.Requests
-@inject IMediator Mediator
+@using EstateManagementUI.BlazorServer.UIServices
+@inject IOperatorUIService OperatorUiService
+@inject IContractUIService ContractUiService
 @inject NavigationManager NavigationManager
-@inject IPermissionService PermissionService
 
 <PageTitle>Create New Contract</PageTitle>
 
