--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/MerchantSettlementHistory.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/MerchantSettlementHistory.razor
@@ -2,7 +2,7 @@
 @using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BusinessLogic.Models
 @using EstateManagementUI.BusinessLogic.Requests
-@using MerchantDropDownModel = EstateManagementUI.BlazorServer.Models.MerchantDropDownModel
+@using MerchantDropDownModel = EstateManagementUI.BlazorServer.Models.MerchantModels.MerchantDropDownModel
 @using MerchantSettlementHistoryModel = EstateManagementUI.BlazorServer.Models.MerchantSettlementHistoryModel
 @rendermode InteractiveServer
 @inject IMediator Mediator
