--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionDetail.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionDetail.razor
@@ -6,8 +6,8 @@
 @using EstateManagementUI.BusinessLogic.Models
 @using EstateManagementUI.BusinessLogic.Requests
 @using ContractProductModel = EstateManagementUI.BlazorServer.Models.ContractModels.ContractProductModel
-@using MerchantDropDownModel = EstateManagementUI.BlazorServer.Models.MerchantDropDownModel
-@using MerchantModel = EstateManagementUI.BlazorServer.Models.MerchantModel
+@using MerchantDropDownModel = EstateManagementUI.BlazorServer.Models.MerchantModels.MerchantDropDownModel
+@using MerchantModel = EstateManagementUI.BlazorServer.Models.MerchantModels.MerchantModel
 @using OperatorDropDownModel = EstateManagementUI.BlazorServer.Models.OperatorModels.OperatorDropDownModel
 @using OperatorModel = EstateManagementUI.BlazorServer.Models.OperatorModels.OperatorModel
 @using TransactionDetailModel = EstateManagementUI.BlazorServer.Models.TransactionDetailModel
