Genreal code tidy up

--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/AnalyticalCharts.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/AnalyticalCharts.razor
@@ -5,7 +5,7 @@
 @rendermode InteractiveServer
 @inject IMediator Mediator
 @inject IJSRuntime JSRuntime
-@inherits CustomComponentBase
+@inherits EstateManagementUI.BlazorServer.Components.Common.CustomComponentBase
 @inject ILogger<AnalyticalCharts> Logger
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
