--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionSummaryMerchant.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionSummaryMerchant.razor
@@ -206,7 +206,7 @@
                                             <span class="@rateClass font-medium">@successRate.ToString("F1")%</span>
                                         </td>
                                         <td class="text-center">
-                                            <button @onclick="() => DrillDownToDetail(item.MerchantId)" 
+                                            <button @onclick="() => DrillDownToDetail(item.MerchantReportingId)" 
                                                     class="btn btn-sm btn-primary"
                                                     title="View detailed transactions">
                                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
